--- a/hire.html
+++ b/hire.html
@@ -304,8 +304,8 @@
       var el = document.getElementById('hcLevel' + i);
       if (el) el.style.display = (i === n) ? 'block' : 'none';
     });
-    var hero = document.querySelector('.hc-hero');
-    if (hero) window.scrollTo({top: hero.offsetTop - 80, behavior: 'smooth'});
+    var container = document.querySelector('.hc-container');
+    if (container) container.scrollIntoView({behavior: 'smooth', block: 'start'});
   }
 
   function updateBreadcrumb(parts) {
