--- a/telehandlers.html
+++ b/telehandlers.html
@@ -147,8 +147,8 @@
       var el = document.getElementById('thLevel' + i);
       if (el) el.style.display = (i === n) ? 'block' : 'none';
     }
-    var hero = document.querySelector('.pa-hero');
-    if (hero) window.scrollTo({top: hero.offsetTop - 80, behavior: 'smooth'});
+    var container = document.querySelector('.hc-container');
+    if (container) container.scrollIntoView({behavior: 'smooth', block: 'start'});
   }
   function thSetHero(title, sub) {
     var t = document.getElementById('thTitle');    if (t) t.textContent = title;
