Optimize hardware hero image (2MB→322KB) & swap Enquire Now to Shop Now on homepage

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2 class="split-hero-title split-hero-title--dark">Building<br>Materials</h2>
         <p class="split-hero-desc split-hero-desc--dark">Thousands of products in stock — timber, insulation, plumbing, paints, tools, PPE and much more. Trade and retail welcome.</p>
         <div class="split-hero-actions">
-          <a href="contact.html" class="btn btn-primary btn-lg">Enquire Now</a>
+          <a href="hardware.html" class="btn btn-primary btn-lg">Shop Now</a>
           <a href="hardware.html" class="btn btn-outline btn-lg">Browse Products</a>
         </div>
       </div>
