--- a/qr-demo.html
+++ b/qr-demo.html
@@ -102,8 +102,8 @@
   </div>
 
   <script>
-    var machineId = 'TH001';
-    var url = 'https://fifty-terms-sin.loca.lt/machine.html?id=' + machineId;
+    var machineId = 'BM135N148';
+    var url = 'https://lovely-walls-brush.loca.lt/machine.html?id=' + machineId;
 
     document.getElementById('demoUrl').textContent = url;
 
